# Image-Format-Transmuter

./: .gitignore  CMakeLists.txt  README.md
src/: configEnums.hpp  dataStructures.h  dataStructures.hpp  init.cpp  init.hpp  main.cpp
src/codecFunctions/: BMPCodecFunctions.h  BMPCodecFunctions.hpp  BMPCodecFuntions.cpp
src/codecFunctions/bmp/: BMPCodecFunctions.cpp  bmpCodecFunctions.cpp  bmpCodecFunctions.hpp
src/codecFunctions/bmp/bmpManagement/: bmpColorManagement.cpp  bmpColorManagement.hpp  bmpPixelManagement.cpp  bmpPixelManagement.hpp
src/codecFunctions/jpg/: jpgCodecFunctions.cpp  jpgCodecFunctions.hpp  jpgStructs.hpp
src/codecFunctions/jpg/jpgAlgorithms/: jpgCompression.cpp  jpgCompression.hpp  jpgDCT.cpp  jpgDCT.hpp  jpgDecompression.cpp  jpgDecompression.hpp  jpgDiffEncoding.cpp  jpgDiffEncoding.hpp  jpgQuantization.cpp  jpgQuantization.hpp  jpgZigzag.cpp  jpgZigzag.hpp
src/codecFunctions/jpg/jpgClasses/: jpgHuffmanTree.cpp  jpgHuffmanTree.hpp
src/codecFunctions/jpg/jpgManagement/: jpgComponentManagement.cpp  jpgComponentManagement.hpp  jpgPixelManagement.cpp  jpgPixelManagement.hpp  jpgSegmentManagement.cpp  jpgSegmentManagement.hpp
src/codecFunctions/jpg/jpgOther/: jpgEnums.hpp  jpgStructs.hpp  jpgUtils.cpp  jpgUtils.hpp
src/codecFunctions/png/: PNGAlgorithms.cpp  PNGAlgorithms.hpp  PNGChunkManagement.cpp  PNGChunkManagement.hpp  PNGCodecFunctions.cpp  pngChunkManagement.cpp  pngChunkManagement.hpp  pngCodecFunctions.cpp  pngCodecFunctions.hpp
src/codecFunctions/png/pngAlgorithms/: pngCRC.cpp  pngCRC.hpp  pngCompression.cpp  pngCompression.hpp  pngFiltering.cpp  pngFiltering.hpp
src/codecFunctions/png/pngManagement/: pngChunkManagement.cpp  pngChunkManagement.hpp  pngColorManagement.cpp  pngColorManagement.hpp  pngPixelManagement.cpp  pngPixelManagement.hpp
src/utils/: enumUtils.cpp  enumUtils.hpp  fileDataManagementUtils.cpp  fileDataManagementUtils.hpp  pixelUtils.cpp  pixelUtils.hpp
